Fix ident check

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
     {
       "matches": ["file://**/*/test.html", "https://*.salesforce.com/*"],
       "js": [
-        "scripts/on-ready.js",
+        "scripts/on-ready.js", "scripts/get-connector-url.js",
         "scripts/get-ident.js", "scripts/get-token.js", "scripts/encode-ident.js", "scripts/inject-iframe.js",
         "scripts/main.js"
       ]
