--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,7 @@
   ],
   "permissions": [
     "activeTab",
+    "storage",
     "https://ajax.googleapis.com/",
     "https://dd04rofzygnm0.cloudfront.net/",
     "https://hullbeta.io/",
